src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/EXTFragmentShadingRate_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/EXTFragmentShadingRate_StringErrorContext.class */
public final class EXTFragmentShadingRate_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glShadingRateEXT(I)V", "net/labymod/core/laby3d/opengl/error/generated/EXTFragmentShadingRateErrorContext");
        methods.put("glShadingRateCombinerOpsEXT(II)V", "net/labymod/core/laby3d/opengl/error/generated/EXTFragmentShadingRateErrorContext");
        methods.put("glFramebufferShadingRateEXT(IIIIIII)V", "net/labymod/core/laby3d/opengl/error/generated/EXTFragmentShadingRateErrorContext");
        methods.put("nglGetFragmentShadingRatesEXT(IIJJ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTFragmentShadingRateErrorContext");
        methods.put("glGetFragmentShadingRatesEXT(ILjava/nio/IntBuffer;Ljava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/EXTFragmentShadingRateErrorContext");
        methods.put("glGetFragmentShadingRatesEXT(I[I[I)V", "net/labymod/core/laby3d/opengl/error/generated/EXTFragmentShadingRateErrorContext");
        return methods;
    }
}
